[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI_Scenes/ClickingTutorial.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/comic_book_ui/compic_book_wider.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI_Scenes/MovementTutorial.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI_Scenes/HowToPlay.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/button_latest.png" type="Texture" id=6]
[ext_resource path="res://UI_Scenes/TypingTutorial.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[node name="HowToPlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BookBG" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="LabelsMargin" type="MarginContainer" parent="."]
margin_left = 59.0
margin_top = 104.0
margin_right = 536.0
margin_bottom = 1039.0

[node name="LabelsScroll" type="ScrollContainer" parent="LabelsMargin"]
margin_right = 477.0
margin_bottom = 935.0

[node name="LabelsList" type="GridContainer" parent="LabelsMargin/LabelsScroll"]
unique_name_in_owner = true
custom_constants/vseparation = 70

[node name="Clicking" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
visible = false
margin_left = 599.0
margin_top = 67.0
margin_right = 599.0
margin_bottom = 67.0

[node name="MovementTutorial" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 389.0
margin_top = -230.0
margin_right = 590.0
margin_bottom = -137.0

[node name="backBtn" type="TextureButton" parent="."]
margin_left = 65.0
margin_top = 875.0
margin_right = 443.0
margin_bottom = 1001.0
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="backBtn"]
margin_left = 49.0
margin_top = 15.0
margin_right = 313.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "<- Back"

[node name="Typing" parent="." instance=ExtResource( 7 )]
unique_name_in_owner = true
visible = false
margin_left = 598.0
margin_top = 107.0
margin_right = 598.0
margin_bottom = 107.0

[connection signal="pressed" from="backBtn" to="." method="_on_backBtn_pressed"]
